--- a/interface-elements-for-desktop/articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/pdf417.md
+++ b/interface-elements-for-desktop/articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/pdf417.md
@@ -10,7 +10,21 @@ The **PDF417** bar code is also called a **symbol** bar code and usually consist
 
 ![](../../../../../images/eurd-win-bar-code-pdf417.png)
 
-The following properties are specific to the **PDF417** type and available in the [Property Grid](../../report-designer-tools/ui-panels/property-grid-tabbed-view.md) under the **Symbology** property:
+## Add the Bar Code to a Report
+
+1. Drag the **Bar Code** item from the report controls toolbox tab and drop it onto the report. 
+
+    ![](../../../../../images/drag-and-drop-barcode.png)
+
+2. Set the control’s **Symbology** property to **PDF417**. 
+
+    ![](../../../../../images/pdf417-in-designer.png)
+
+3. Specify [common](add-bar-codes-to-a-report.md) barcode properties and properties [specific](#specific-properties) to **PDF417**.
+
+## Specific Properties
+
+In the [property grid](../../report-designer-tools/ui-panels/property-grid-tabbed-view.md), expand the **Symbology** list and specify the following properties specific to **PDF417**:
 
 * **Columns**
 
